--- a/index.html
+++ b/index.html
@@ -10,36 +10,53 @@
   <body>
     <header>
       <div class="leftSide">
-        <ul>
+        <ul class="navbar-links">
           <li>
             <div class="dropdown">
-              <span>Sell</span><i class="fas fa-chevron-down"></i>
+              <button class="dropbtn">
+                Sell
+                <i class="fa fa-caret-down"></i>
+              </button>
               <div class="dropdown-content">
-                <p>A la grande le puse Cuca</p>
+                <a href="#">A la grande</a>
+                <a href="#">le puse</a>
+                <a href="#">Cuca</a>
               </div>
             </div>
           </li>
           <li>
             <div class="dropdown">
-              <span>Manage</span><i class="fas fa-chevron-down"></i>
+              <button class="dropbtn">
+                Manage
+                <i class="fa fa-caret-down"></i>
+              </button>
               <div class="dropdown-content">
-                <p>Si te preocupas mucho, te arrugas</p>
+                <a href="#">Si te </a>
+                <a href="#">preocupas mucho</a>
+                <a href="#">te arrugas</a>
               </div>
             </div>
           </li>
           <li>
             <div class="dropdown">
-              <span>Integrate</span><i class="fas fa-chevron-down"></i>
+              <button class="dropbtn">
+                Integrate
+                <i class="fa fa-caret-down"></i>
+              </button>
               <div class="dropdown-content">
-                <p>Lima limón, y me sabe a bombón</p>
+                <a href="#">No me preguntes</a>
+                <a href="#">sólo soy</a>
+                <a href="#">una chica</a>
               </div>
             </div>
           </li>
           <li>
             <div class="dropdown">
-              <span>Migrate</span>
+              <button class="dropbtn">Migrate</button>
               <div class="dropdown-content">
-                <p>No me preguntes, sólo soy una chica</p>
+                <a href="#">Lima limón</a>
+                <a href="#">y me sabe</a>
+                <a href="#">a bombón</a>
               </div>
             </div>
           </li>
@@ -47,34 +64,78 @@
       </div>
 
       <div class="rightSide">
-      <ul>
-        <li>
-          <div class="dropdown">
-            <span>Platform</span><i class="fas fa-chevron-down"></i>
-            <div class="dropdown-content">
-              <p>Usted ha sido robado por el Gato</p>
+        <ul class="navbar-links">
+          <li>
+            <div class="dropdown">
+              <button class="dropbtn">
+                Platform
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Usted ha</a>
+                <a href="#">sido robado</a>
+                <a href="#">por el Gato</a>
+              </div>
             </div>
-          </div>
-        </li>
-        <li>
-          <div class="dropdown">
-            <span>Blog</span>
-            <div class="dropdown-content">
-              <p>Cama arriba, cama abajo</p>
+          </li>
+          <li>
+            <div class="dropdown">
+              <button class="dropbtn">
+                Blog
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Cama arriba</a>
+                <a href="#">Cama abajo</a>
+              </div>
             </div>
-          </div>
-        </li>
-        <li>
-          <div class="dropdown">
-            <span>Let's Talk</span>
-            <div class="dropdown-content">
-              <p>Estúpido y sensual Flanders</p>
+          </li>
+          <li>
+            <div class="dropdown">
+              <button class="dropbtn">
+                Let's Talk
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Estúpido</a>
+                <a href="#">y sensual</a>
+                <a href="#">Flanders</a>
+              </div>
             </div>
-          </div>
-        </li>
-      </ul>
-    </div>
+          </li>
+        </ul>
+      </div>
     </header>
+
+    <!--  Comienza la parte de Ivan  -->
+
+    <div class="container">
+      <div class="box-text">
+        <div class="second-container">
+          <p class="firt-text">Todays enterprise commerce platform</p>
+          <h1 class="title">Flexible and fast to launch</h1>
+          <p class="second-text">
+            Shopify plus is the only cost-effective enterprise platform that's
+            build for change. Start selling online now.
+          </p>
+          <button type="submit" class="style-btn">Let's talk</button>
+        </div>
+      </div>
+      <div class="box-video">
+        <iframe
+          width="580"
+          height="350"
+          src="https://www.youtube.com/embed/TvdIPMkkJTI"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+    <a href="#" class="btn-float">
+      <img class="img" src="/bootcampLandingPage/icon.png" alt="" />
+    </a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/js/all.min.js"></script>
   </body>
 </html>
